--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class KNN (object):\n",
+    "    \n",
+    "    def fit():\n",
+    "        pass\n",
+    "    \n",
+    "    def predict():\n",
+    "        pass\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,12 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit(self, X_train, y_train):\n",
-    "    pass\n",
+    "    self.X_train = X_train\n",
+    "    self.y_train = y_train\n",
     "    \n",
     "# This line updates the knn.fit method to point to the function we've just written\n",
     "KNN.fit = fit"
@@ -101,12 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_distances(self, x):\n",
-    "    pass\n",
+    "    \n",
+    "    dist=[]\n",
+    "    \n",
+    "    for index, val in enumerate(self.X_train):\n",
+    "        dist_x = euc(x, val)\n",
+    "        dist.append((index, dist_x))\n",
+    "    return dist\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
@@ -132,12 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_k_nearest(self, dists, k):\n",
-    "    pass\n",
+    "    dists_sorted = sorted(dists, key=lambda x: x[1])\n",
+    "    return dists_sorted[:k]\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_k_nearest = _get_k_nearest"
@@ -158,12 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_label_prediction(self, k_nearest):\n",
-    "    pass\n",
+    "    labels = [self.y_train[i] for i, _ in k_nearest]\n",
+    "    total_counts = np.bincount(labels)\n",
+    "    return np.argmax(total_counts)\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_label_prediction = _get_label_prediction"
@@ -203,12 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(self, X_test, k=3):\n",
-    "    pass\n",
+    "    \n",
+    "    preds=[]\n",
+    "    \n",
+    "    for i in X_test:\n",
+    "        all_dist = self._get_distances(i)\n",
+    "        k_nearest = self._get_k_nearest(all_dist, k)\n",
+    "        labels = self._get_label_prediction(k_nearest)\n",
+    "        \n",
+    "        preds.append(labels)\n",
+    "        \n",
+    "    return preds\n",
     "        \n",
     "KNN.predict = predict"
    ]
@@ -228,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = None"
+    "X_train, X_test, y_train, y_test =  train_test_split(data, target, test_size=0.25)"
    ]
   },
   {
@@ -266,11 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn = None"
+    "knn = KNN()\n",
+    "knn.fit(X_train, y_train)"
    ]
   },
   {
@@ -282,11 +312,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = None"
+    "preds = knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 1,\n",
+       " 0,\n",
+       " 2,\n",
+       " 0,\n",
+       " 2,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 2,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 2,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 2,\n",
+       " 1,\n",
+       " 0,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 0,\n",
+       " 2]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
    ]
   },
   {
@@ -298,11 +385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy: 0.9736842105263158\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Testing Accuracy: {}\".format(accuracy_score(None, None)))\n",
+    "print(\"Testing Accuracy: {}\".format(accuracy_score(y_test, preds)))\n",
     "# Expected Output: Testing Accuracy: 0.9736842105263158"
    ]
   },
@@ -339,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
